--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>ba.sum.fpmoz</groupId>
     <artifactId>Artists</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Restoran</name>
-    <description>Restoran</description>
+    <name>Artists</name>
+    <description>Artists</description>
     <properties>
         <java.version>17</java.version>
     </properties>
