--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ba.sum.fpmoz</groupId>
-    <artifactId>Artists</artifactId>
+    <artifactId>Salon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Artists</name>
-    <description>Artists</description>
+    <name>Salon</name>
+    <description>Salon</description>
     <properties>
         <java.version>17</java.version>
     </properties>
