--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql:3306/artists?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=artist
+spring.datasource.url=jdbc:mysql://mysql:3306/salon?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=salon
 spring.datasource.password=lozinka
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
